added skills to cv admin

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -294,6 +294,13 @@
             "PATH": "Document path",
             "NO_DOCUMENTS": "No documents available",
             "DISPLAYED": "Displayed"
+        },
+        "SKILLS": {
+            "SKILLS": "Skills",
+            "NAME": "Skill name",
+            "LEVEL": "Level",
+            "CATEGORY": "Category",
+            "CATEGORIES": "Categories"
         }
     },
     "PORTFOLIO": {
