--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -370,7 +370,7 @@
     },
     "BREADCRUMBS": {
         "HOME": "Home",
-        "CV": "CV",
+        "CV": "Curriculum Vitae",
         "PORTFOLIO": "Portfolio"
     }
 }
