--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -368,7 +368,7 @@
     },
     "BREADCRUMBS": {
         "HOME": "Acceuil",
-        "CV": "CV",
+        "CV": "Curriculum Vitae",
         "PORTFOLIO": "Portfolio"
     }
 }
